# learning_website

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
fixtures/: test_data.json
materials/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: clean_data.py  full_clean.py
materials/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: load_test_data.py
users/migrations/: 0001_initial.py  0002_alter_payment_options_subscription.py  0003_payment_payment_link.py  0004_remove_payment_name_paid_product.py  0005_alter_payment_payment_link.py
